 Otherwise indicated differently, all changes made by 
 	Jelmer Vernooij <jelmer@vernstok.nl>

Ctrlproxy 2.7:
 * Add default ctrlproxyrc and install it
 * Add webconfig python script (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Add some tests to the testsuite
 * Add gettext support
 * Extend linestack interface
 * Add repl_limited module
 * Add test-filter utility
 * Fix bug in unloading modules
 * Fix dependency system for modules
 * Add testsuite
 * Make CONNECT command force a reconnect if one is waiting to happen
 * Restructure API for server management inside networks
 * Add DELNETWORK command
 * Introduce functions to use filter classes
 * Support different NICK sent by client in replication
 * Support non-blocking connects (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Add 'NEXTSERVER' command (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Unset autojoin on KICK (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Add ability to change NICK when away
 * Make repl_* work when NICK sent by client differs from current NICK
 * Build with -Wall
 * Add dircproxyrc-to-ctrlproxyrc script
 * Add TOS support (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Support mIRC and ksirc
 * Don't crash on non-existing <networks> or <plugins>
 * Add 'debug' module for easier debugging
 * Make sure modules are never loaded twice (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Support binding on a specific IP in socket module (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Add support for unloading crashing modules
 * Use correct string comparison when necessary
 * Support 'true' RFC1459 string comparison
 * Respect CASEMAPPING sent by server
 * Use NETWORK sent by server
 * Add autosave module (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Use PREFIX sent by server
 * Add get_prefix_by_mode()
 * Use CHANTYPES sent by server
 * Add way to get network features
 * Keep track of channels nick is on in network_nick structure