@@ -56,5 +56,5 @@ AC_SUBST(MODS_SUBDIRS)
 AC_CHECK_FUNCS([gethostbyname gethostname memset mkdir strcasecmp strchr strdup strerror strncasecmp strstr uname backtrace_symbols gettimeofday strrchr])
 AC_MSG_RESULT([Going to build the following plugins: ])
 AC_MSG_RESULT([$MODS])
-AC_CONFIG_FILES([Makefile mods/Makefile testsuite/Makefile ctrlproxy.pc po/Makefile.in ])
+AC_CONFIG_FILES([Makefile mods/Makefile testsuite/Makefile ctrlproxy.pc po/Makefile.in scripts/Makefile])
 AC_OUTPUT
